# ctrlc-windows

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.js  clean.js  copy-killer.js  index.d.ts  not-windows.js  package.json
.changeset/: better-error-messages.md  binary-releases.md  config.json  fix-install-script.md  hip-colts-scream.md  many-schools-search.md  rich-goats-greet.md  serious-weeks-invite.md  skip-non-windows.md  smart-penguins-rhyme.md  stupid-eagles-float.md  switch-to-n-api.md  tame-pumas-cheer.md
.circleci/: config.yml
.github/workflows/: changeset.yml  release.yml  test.yml  upload-binaries.yml
lib/: index.d.ts  index.js  posix.js
native/: Cargo.toml
native/src/: lib.rs  unix.rs  windows.rs
src/: lib.rs
test/: helpers.ts  unix.test.ts  windows.test.ts
test/fixtures/: daemon.js
