[package]
authors = ["Frontside Engineering <engineering@frontside.com>"]
edition = "2021"
# exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "ctrlc-windows"
version = "0.1.0"

[[bin]]
bench = false
name = "process-killer"
test = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = {version = "2.6.3", default-features = false, features = ["napi4"]}
napi-derive = "2.6.0"
winapi = {version = "0.3.9", features = ["consoleapi", "processthreadsapi", "handleapi"]}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
