[package]
name = "ctrlc-windows"
version = "0.1.0"
authors = ["Frontside Engineering <engineering@frontside.com>"]
license = "MIT"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ctrlc_windows"
crate-type = ["cdylib"]

[dependencies.neon]
default-features = false
features = ["napi-4"]
version = "0.8.1"

[dependencies]
winapi = { version = "0.3.9", features = ["consoleapi"] }
