[package]
name = "ctrlc-windows"
version = "0.1.0"
authors = ["Frontside Engineering <engineering@frontside.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ctrlc_windows"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.1"

[dependencies]
neon = "0.8.1"
winapi = { version = "0.3.9", features = ["consoleapi"] }
